# fragmentor

./: Dockerfile  Makefile  backup-script.sh  createsuperuser.py  debug_docker_compose.yml  dev.yml  discord.Dockerfile  discord_entry.sh  docker-compose.yml  entrypoint.sh  postgres.Dockerfile  pyproject.toml  setup.cfg  tg.Dockerfile  tg_entry.sh
AdminPanel/: admin_helper_models.py  admin_panel.py
alembic/: env.py
alembic/versions/: 2b76db564670_init.py  5d6498de7118_user_is_email_confirmed.py  cf9a848e24e9_added_nickname.py
core/: fastapi_config.py  limiter.py  logger.py  settings.py
db/: is_confirmed_trigger.py  postgres.py  redis.py
db/models/: booking.py  helpers.py  payment.py  schedule.py  user.py
discord_bot/: bot.py
docker_debug/: debug_docker_compose.yml  tg_debug.Dockerfile  tg_debug_entry.sh
elk_service/: docker-compose.yml
elk_service/deploy/: logstash.conf
nginx/: nginx.conf
nginx/conf.d/: site.conf
notifications/: credentials.json  email_notification.py
notifications/templates/: booking-rejected-by-trainer.html  discord_link.html  email_confirmation.html  payments_links.html
payments/: cryptoclaud.py  cryptocloud_base.py  cryptocould_service.py  payment_base.py  yookassa_service.py
server/: main.py
services/: booking.py  discord_service.py  helpers.py  payment.py  redis_service.py  schedule.py  security.py  template.py  tokens.py  user.py  web_socket.py
templates/: login.html
tg/: bot_init.py  main.py
tg/callbacks/: callbackdata.py
tg/handlers/: commands.py  confirm_booking.py  register.py
tg/keyboards/: confirm.py
(+19 files in other folders)
